--- a/28/style.css
+++ b/28/style.css
@@ -7,6 +7,24 @@ nav{
     position: fixed;
     top: 0;
 }
+#horrornav{
+    background-color: #000;
+}
+#horrornav a{
+    color: red;
+}
+#fromba{
+    background-color:  rgb(45, 216, 159);
+}
+#fromnav{
+    background-color:  rgb(45, 216, 159);
+}
+#animeba{
+    background-color: rgb(150, 237, 233);
+}
+#animenav{
+    background-color:rgb(150, 237, 233) ;
+}
 nav ul{
     list-style: none;
     display: flex;
@@ -54,7 +72,7 @@ nav a:hover{
 }
 .letter2{
     margin-top: 50px;
-    text-align: center;
+    color: red;
 }
 .warning{
     color: red;
@@ -109,4 +127,8 @@ td{
 }
 .LeBron{
     width: 35%;
+}
+#horror{
+    background-image: url(image/anaberu.jpg);
+    background-size: cover;
 }
